Wed Aug 17 15:01:28 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ACE-INSTALL.html:

          Fix typo in SYSROOT default example.

Wed Aug 17 13:54:12 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Message_Block.cpp:

          Unfuzz.

Mon Aug 15 14:41:24 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Block.cpp: Replaced the recursive version of
          ACE_Message_Block::clone() with a non-recursive version to avoid
          problems when there are large numbers of message blocks.  Thanks
          to Andrew Metcalfe <andrew dot metcalfe at ccur dot com> for
          reporting this and suggesting the fix, which was provided by
          Eric Frias <efrias at syncad dot com>.

Sun Aug 14 10:44:32 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Added support for inline, thanks to Thomas Lockhart for providing
          the patch

Wed Aug 10 20:15:40 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ACE-INSTALL.html:
        * NEWS:

          Add a note about support for Android in the news, and add more
          detail to the installation steps.

Wed Aug 10 19:02:21 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ACE-INSTALL.html:

          Updated the text related to installing for Android.

        * include/makeinclude/platform_android_linux.GNU:

          Added this file.

        * include/makeinclude/platform_linux_android.GNU:

          Removed this file.

          Renamed the file to be consistent with others, now the name is
          target platform first followed by the build-specific name. The
          settings for cross compilation are now configured inside this
          platform file, using som assumptions for architecture.

          The build for the arm architecture works, but it looks like x86
          still needs work by the NDK team, it was just added in their r6