@@ -1,3 +1,12 @@
+Thu Aug 18 01:31:48 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * ace/Message_Block.cpp:
+
+          Reverted the change from Mon Aug 15 14:41:24 UTC 2011 Douglas
+          C. Schmidt <schmidt@dre.vanderbilt.edu>. This change caused a
+          regression failure that showed up on some of the TAO tests. We
+          can try reintroducing this patch after the upcoming release.
+
 Wed Aug 17 15:01:28 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * ACE-INSTALL.html:
